--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Jeffsum | A Homage</title>
     <link rel="stylesheet" href="./styles/main.pcss" />
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="app">
@@ -67,7 +68,11 @@
       <link rel="stylesheet" href="./styles/fallback.pcss" />
       <div class="fallback">
         <div class="fallback__content message">
-          <img class="fallback__jeff" src="./img/none.jpg" alt="Concerned Jeff" />
+          <img
+            class="fallback__jeff"
+            src="./img/none.jpg"
+            alt="Concerned Jeff"
+          />
           <p>
             If Jeff looks concerned it's because your browser doesn't yet
             support the features in red below:
