Tweak links for SEO

--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
         </p>
         <p>
           For the source of its inspiration, design and the
-          <strong>real</strong> jeffness you should, uh, go
-          <a href="http://jeffsum.com">here</a>
+          <strong>real</strong> jeffness you should, uh, go to
+          <a href="http://jeffsum.com">the original Jeffsum</a>
         </p>
         <p><a href="#">back up</a></p>
       </div>
