Add meta description

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="Description"
+      content="An example of how new Web APIs can enable new UI capabilities"
+    />
     <title>Jeffsum | A Homage</title>
     <link rel="stylesheet" href="./styles/main.pcss" />
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
