Use data attributes to define gradient stops
Switching between class names is restrictive: it doesn't allow us to
dynamically update the UI based on content.

Defining values on data attributes per image colocates gradient
definitions with the image they accompany, meaning that we can now add as
many "slides" as we like, in any order we want.

Additionally
- Changed property names to be more accurate
- Simplified feature detection

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="jeff0">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,9 +17,24 @@
       <div class="app__header">
         <div class="app__header__content">
           <figure class="header__jeffs">
-            <img src="./img/jeff1.jpg" alt="Sweater Jeff" />
-            <img src="./img/jeff2.jpg" alt="Cardigan Jeff" />
-            <img src="./img/jeff3.jpg" alt="Polka Jeff" />
+            <img
+              src="./img/jeff1.jpg"
+              alt="Jeff YEAH"
+              data-gradient-start="#61bfd9"
+              data-gradient-end="#0551b4"
+            />
+            <img
+              src="./img/jeff2.jpg"
+              alt="Jeff again"
+              data-gradient-start="#15AF88"
+              data-gradient-end="#6C429A"
+            />
+            <img
+              src="./img/jeff3.jpg"
+              alt="It's all Jeff"
+              data-gradient-start="#EEA031"
+              data-gradient-end="#930560"
+            />
           </figure>
           <div class="header__words">
             <p class="credit">
