Add toast messaging on copy status

--- a/src/index.html
+++ b/src/index.html
@@ -102,6 +102,7 @@
     </a>
 
     <template id="template-fallback">
+      <link rel="stylesheet" href="./styles/toaster.pcss" />
       <link rel="stylesheet" href="./styles/fallback.pcss" />
       <div class="fallback">
         <div class="fallback__content message">
@@ -130,6 +131,7 @@
           </div>
         </div>
       </div>
+      <div class="toaster"></div>
     </template>
 
     <!-- Application -->
