Improve copy for enabling features

--- a/src/index.html
+++ b/src/index.html
@@ -120,13 +120,19 @@
             <p>Until life finds a way...</p>
             <ol>
               <li>
-                Click <button class="btn--text" data-click="copy">this button</button> to copy
-                the chrome://flags link
+                Click
+                <button class="btn--text" data-click="copy">this button</button>
+                to copy the chrome://flags link
               </li>
               <li>
                 Open a new tab, paste the copied URL into the address bar and
-                select "enabled"
+                hit return
               </li>
+              <li>
+                Select "enabled" on the highlighted "Experimental Web Platform
+                features", then hit the "Relaunch now" button
+              </li>
+              <li>Reload this page… and bask in the Jeffness</li>
             </ol>
           </div>
         </div>
