Added comments to mark regions of interest

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,7 @@
       </div>
     </div>
 
+    <!-- Github badge -->
     <a
       href="https://github.com/oliverturner/jeffsum"
       class="github-corner"
@@ -101,6 +102,7 @@
       </svg>
     </a>
 
+    <!-- Fallback message -->
     <template id="template-fallback">
       <link rel="stylesheet" href="./styles/toaster.pcss" />
       <link rel="stylesheet" href="./styles/fallback.pcss" />
