--- a/src/index.html
+++ b/src/index.html
@@ -119,20 +119,21 @@
           </p>
           <ul class="fallback__features" data-slot="features"></ul>
           <div class="fallback__instructions">
-            <p>Until life finds a way...</p>
+            <p>
+              Until life finds a way, we need to enable "Experimental Web
+              Platform features" in
+              <a href="https://www.google.com/chrome/">Chrome</a>:
+            </p>
             <ol>
               <li>
                 Click
                 <button class="btn--text" data-click="copy">this button</button>
-                to copy the chrome://flags link
+                to copy the <code>chrome://flags</code> link
               </li>
+              <li>Paste the copied URL into a new tab and hit return</li>
               <li>
-                Open a new tab, paste the copied URL into the address bar and
-                hit return
-              </li>
-              <li>
-                Select "enabled" on the highlighted "Experimental Web Platform
-                features", then hit the "Relaunch now" button
+                Select "enabled" on the highlighted experiment, then "Relaunch
+                now"
               </li>
               <li>Reload this page… and bask in the Jeffness</li>
             </ol>
