Add catches to imports, redesign fallback

--- a/src/index.html
+++ b/src/index.html
@@ -113,12 +113,14 @@
             src="./img/none.jpg"
             alt="Concerned Jeff"
           />
-          <p>
-            If Jeff looks concerned it's because your browser doesn't yet
-            support the features in red below:
-          </p>
-          <ul class="fallback__features" data-slot="features"></ul>
-          <div class="fallback__instructions">
+          <div class="fallback__text fallback__text--intro">
+            <p>
+              If Jeff looks concerned it's because your browser doesn't yet
+              support the features in red below:
+            </p>
+            <ul class="fallback__features" data-slot="features"></ul>
+          </div>
+          <div class="fallback__text fallback__text--instructions">
             <p>
               Until life finds a way, we need to enable "Experimental Web
               Platform features" in
