Add bg for iframing purposes

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="app">
-      <div class="app__header">
+      <header class="app__header">
         <div class="app__header__content">
           <figure class="header__jeffs">
             <img
@@ -50,7 +50,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </header>
       <main class="app__content">
         <form class="jeffness">
           <label class="jeffness__label">
@@ -133,10 +133,7 @@
                 to copy the <code>chrome://flags</code> link
               </li>
               <li>Paste the copied URL into a new tab and hit return</li>
-              <li>
-                Select "enabled" on the highlighted experiment, then "Relaunch
-                now"
-              </li>
+              <li>"Enable" the highlighted experiment, then "Relaunch"</li>
               <li>Reload this page… and bask in the Jeffness</li>
             </ol>
           </div>
