Improve messaging and buttons

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
           <strong>real</strong> jeffness you should, uh, go to
           <a href="http://jeffsum.com">the original Jeffsum</a>
         </p>
-        <p><a href="#">back up</a></p>
+        <p><a class="btn--text" href="#">back up</a></p>
       </div>
     </div>
 
