--- a/src/index.html
+++ b/src/index.html
@@ -42,10 +42,9 @@
               <a href="https://www.twitter.com/seanehalpin">He made this.</a>
             </p>
             <div class="description">
-              <h1 class="description__title">Jeffsum.</h1>
+              <h1 class="description__title">Placejeff.</h1>
               <p class="description__strapline">
-                A little text placeholder generator of Jeff Goldblum
-                awesomeness.
+                A little image gallery of Jeff Goldblum awesomeness.
               </p>
             </div>
           </div>
@@ -54,32 +53,35 @@
       <main class="app__content">
         <form class="jeffness">
           <label class="jeffness__label">
-            Gimme like
+            Inject Jeff's work into my veins like
             <input
               class="jeffness__input"
               type="number"
               name="paragraphs"
               value="5"
             />
-            <span>paragraphs of that Jeffness.</span>
+            <span>times</span>
           </label>
           <button class="jeffness__btn">Receive the Jeff.</button>
         </form>
       </main>
     </div>
 
-    <div id="acknowledgements" class="acknowledgements">
-      <div class="acknowledgements__content message">
-        <p>
-          This is just an experiment in using web technologies to make authoring
-          animated interfaces more declarative and performant.
-        </p>
-        <p>
-          For the source of its inspiration, design and the
-          <strong>real</strong> jeffness you should, uh, go to
-          <a href="http://jeffsum.com">the original Jeffsum</a>
-        </p>
-        <p><a class="btn--text" href="#">back up</a></p>
+    <div id="main" class="main">
+      <div class="main__gallery"></div>
+      <div class="main__acknowledgements">
+        <div class="acknowledgements__content message">
+          <p>
+            This is just an experiment in using web technologies to make
+            authoring animated interfaces more declarative and performant.
+          </p>
+          <p>
+            For the source of its inspiration, design and the
+            <strong>real</strong> jeffness you should, uh, go to
+            <a href="http://jeffsum.com">the original Jeffsum</a>
+          </p>
+          <p><a class="btn--text" href="#">back up</a></p>
+        </div>
       </div>
     </div>
 
