--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
               <a href="https://www.twitter.com/seanehalpin">He made this.</a>
             </p>
             <div class="description">
-              <h1 class="description__title">Placejeff.</h1>
+              <h1 class="description__title">Placeblum.</h1>
               <p class="description__strapline">
                 A little image gallery of Jeff Goldblum awesomeness.
               </p>
