Tweak text and styling for Placeblum branding

--- a/src/index.html
+++ b/src/index.html
@@ -69,15 +69,15 @@
 
     <div id="main" class="main">
       <div class="main__gallery"></div>
+
       <div class="main__acknowledgements">
         <div class="acknowledgements__content message">
           <p>
-            This is just an experiment in using web technologies to make
-            authoring animated interfaces more declarative and performant.
+            Inspired by the incredible work of
+            <a href="https://twitter.com/seanehalpin">Sean Halpin</a>.
           </p>
           <p>
-            For the source of its inspiration, design and the
-            <strong>real</strong> jeffness you should, uh, go to
+            You should, uh, go to
             <a href="http://jeffsum.com">the original Jeffsum</a>
           </p>
           <p><a class="btn--text" href="#">back up</a></p>
