--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       content="An example of how new Web APIs can enable new UI capabilities"
     />
     <title>Jeffsum | A Homage</title>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="src/styles/main.css" />
+    <link rel="shortcut icon" href="src/img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="app">
@@ -18,19 +18,19 @@
         <div class="app__header__content">
           <figure class="header__jeffs">
             <img
-              src="/img/jeff1.jpg"
+              src="src/img/jeff1.jpg"
               alt="Jeff YEAH"
               data-gradient-start="#61bfd9"
               data-gradient-end="#0551b4"
             />
             <img
-              src="/img/jeff2.jpg"
+              src="src/img/jeff2.jpg"
               alt="Jeff again"
               data-gradient-start="#15AF88"
               data-gradient-end="#6C429A"
             />
             <img
-              src="/img/jeff3.jpg"
+              src="src/img/jeff3.jpg"
               alt="It's all Jeff"
               data-gradient-start="#EEA031"
               data-gradient-end="#930560"
@@ -106,13 +106,13 @@
 
     <!-- Fallback message -->
     <template id="template-fallback">
-      <link rel="stylesheet" href="/css/toaster.css" />
-      <link rel="stylesheet" href="/css/fallback.css" />
+      <link rel="stylesheet" href="src/styles/toaster.css" />
+      <link rel="stylesheet" href="src/styles/fallback.css" />
       <div class="fallback">
         <div class="fallback__content message">
           <img
             class="fallback__jeff"
-            src="/img/none.jpg"
+            src="src/img/none.jpg"
             alt="Concerned Jeff"
           />
           <div class="fallback__text fallback__text--intro">
@@ -145,6 +145,6 @@
     </template>
 
     <!-- Application -->
-    <script type="module" src="/js/entry.js"></script>
+    <script type="module" src="src/js/entry.js"></script>
   </body>
 </html>
