--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <div id="main" class="main">
-      <div class="main__gallery" data-component="quotes"></div>
+      <div class="main__quotes" data-component="quotes"></div>
 
       <div class="main__acknowledgements">
         <div class="acknowledgements__content message">
